
	* Makefile.am:
	* configure.ac: configure in tools/.

2011-01-14 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c:
	* src/utils/nautilus-actions-run.c:
	* src/utils/nautilus-actions-schemas.c: Add locale.h include.

2011-01-12 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Enable silent rules by default.

2011-01-10 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-pivot.c:
	* src/core/na-pivot.h (na_pivot_register):
	* src/core/na-settings.c:
	* src/core/na-settings.h (na_settings_register):
	* src/plugin-menu/nautilus-actions.c (instance_constructed):
	Fix compilation.

2011-01-09 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-application.c (display_dlg): Setup parent window.

	* src/api/na-iimporter.h:
	* src/core/na-io-provider.c:
	* src/core/na-object-id.c:
	* src/core/na-object-item.c:
	* src/io-desktop/nadp-utils.c:
	* src/nact/nact-assistant-import.c:
	* src/nact/nact-iactions-list-bis.c:
	* src/nact/nact-iactions-list.h:
	* src/nact/nact-main-window.c:
	* src/nact/nact-preferences.ui:
	* src/nact/nact-tree-model.c: Remove all deprecated references to an UUID.

	* po/POTFILES.in: Add src/io-desktop/nadp-formats.c file.

	* src/core/na-object-profile-factory.c:
	Remove %o/%O parameters from description of version 2.0.
	Add a missing line feed.

	* tools/check-po.sh: Adapt to glade files.

2011-01-08 Pierre Wieser <pwieser@trychlos.org>

	* src/utils/nautilus-actions-new.c (init_options):
	* src/utils/nautilus-actions-run.c (init_options):
	* src/utils/nautilus-actions-schemas.c (init_options):
	Initialize translation domain for GOptionContext.

	* src/core/na-data-boxed.c
	(string_spec, slist_spec, bool_spec, pointer_spec, uint_spec):
	* src/core/na-export-format.c
	(na_export_format_get_label, na_export_format_get_description):
	* src/core/na-iabout.c (na_iabout_display):
	* src/core/na-object-action.c (na_object_action_new_with_defaults):
	* src/core/na-object-menu.c (na_object_menu_new_with_defaults):